--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       </li>
 
       <li class="nav-item ">
-        <a class="nav-link text-white" id="thecategorynavbar" href="./index.html">Home</a>
+        <a class="nav-link text-white" id="thecategorynavbar" href="./">Home</a>
       </li>
       <li class="nav-item">
         <a class="nav-link text-white" id="thecategorynavbar" href="./zentech-products.pdf">Products</a>
@@ -171,7 +171,7 @@
 
       <p class="col-md-12 text-center text-align"> 
         <div class="col-md-4 col-sm-12 text-center">
-        <a href="./index.html"style="font-size:1.25rem;"> <span class="text-secondary">Zentech Pharma</span> </a>
+        <a href="./"style="font-size:1.25rem;"> <span class="text-secondary">Zentech Pharma</span> </a>
         </div>
         
         <div class="col-md-4 col-sm-12 text-center mb-2">
