--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto align-items-center justify-content-between" style="width:100%;text-align:center;">
       <li class="nav-item ">
-        <a class="nav-link text-white" id="thecategorynavbar" href="./index.html"><i><b>Zentech Pharma</b></i></a>
+        <a class="nav-link text-white" id="thecategorynavbar" href="./"><i><b>Zentech Pharma</b></i></a>
       </li>
 
       <li class="nav-item ">
