--- a/aboutus.html
+++ b/aboutus.html
@@ -55,11 +55,11 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto align-items-center justify-content-between" style="width:100%;text-align:center;">
       <li class="nav-item ">
-        <a class="nav-link text-white" id="thecategorynavbar" href="./index.html"><i><b>Zentech Pharma</b></i></a>
+        <a class="nav-link text-white" id="thecategorynavbar" href="./"><i><b>Zentech Pharma</b></i></a>
       </li>
 
       <li class="nav-item ">
-        <a class="nav-link text-white" id="thecategorynavbar" href="./index.html">Home</a>
+        <a class="nav-link text-white" id="thecategorynavbar" href="./">Home</a>
       </li>
       <li class="nav-item">
         <a class="nav-link text-white" id="thecategorynavbar" href="./zentech-products.pdf">Products</a>
@@ -171,7 +171,7 @@
 
       <p class="col-md-12 text-center text-align"> 
         <div class="col-md-4 col-sm-12 text-center">
-        <a href="./index.html"style="font-size:1.25rem;"> <span class="text-secondary">Zentech Pharma</span> </a>
+        <a href="./"style="font-size:1.25rem;"> <span class="text-secondary">Zentech Pharma</span> </a>
         </div>
         
         <div class="col-md-4 col-sm-12 text-center mb-2">
