--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     <address class="">
       <strong>Address</strong><br>
       Zentech Pharmaceuticals<br>
-      SCF 450, Second Floor, New Motor Market, Manimajra<br>
+      SCF-450, 1st & 2nd Floor, M. Market, Sector- 13<br>
       160101 Chandigarh, India<br>
     </address>
 
