--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
     <address class="">
       <strong>Phone</strong><br>
-      <a href="tel:+919958887437">995-888-7437</a>
+      <a href="tel:+919958887437">995-888-7437</a><br>
       <a href="tel:+917307007437">730-700-7437</a>
     </address>
 
