--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
 
     <address class="">
       <strong>Email Address</strong><br>
+      <a href="mailto:info@zentechpharma.com">info@zentechpharma.com</a><br>
       <a href="mailto:zentechpharmaceuticals@gmail.com">zentechpharmaceuticals@gmail.com</a>
     </address>
   
