--- a/contactus.html
+++ b/contactus.html
@@ -108,6 +108,7 @@
 
     <address class="">
       <strong>Email Address</strong><br>
+      <a href="mailto:info@zentechpharma.com">info@zentechpharma.com</a><br>
       <a href="mailto:zentechpharmaceuticals@gmail.com">zentechpharmaceuticals@gmail.com</a>
     </address>
   
