--- a/gallery.html
+++ b/gallery.html
@@ -190,28 +190,28 @@ body {
   <div class="column Tablets">
     <div class="content">
       <img src="./pictures/tab/zedten alu-alu.jpg" style="width:100%">
-      <center><h4>Zedten alu-alu</h4></center>
+      <center><h4>Zedten (Alu-Alu)</h4></center>
       <p></p>
     </div>
   </div>
   <div class="column Tablets">
     <div class="content">
       <img src="./pictures/tab/zedten-mr.jpg" style="width:100%">
-      <center><h4>Zedten-mr</h4></center>
+      <center><h4>Zedten-MR</h4></center>
       <p></p>
     </div>
   </div>
   <div class="column Tablets">
     <div class="content">
       <img src="./pictures/tab/zedten-sp.jpg" style="width:100%">
-      <center><h4>Zedten-sp</h4></center>
+      <center><h4>Zedten-SP</h4></center>
       <p></p>
     </div>
   </div>
   <div class="column Tablets">
     <div class="content">
       <img src="./pictures/tab/zedten-th.jpg" style="width:100%">
-      <center><h4>Zedten-th</h4></center>
+      <center><h4>Zedten-TH</h4></center>
       <p></p>
     </div>
   </div>
@@ -232,7 +232,7 @@ body {
   <div class="column Tablets">
     <div class="content">
       <img src="./pictures/tab/mozfix-lb.jpg" style="width:100%">
-      <center><h4>Mozfix-lb</h4></center>
+      <center><h4>Mozfix-LB</h4></center>
       <p></p>
     </div>
   </div>
@@ -253,14 +253,14 @@ body {
   <div class="column Tablets">
     <div class="content">
       <img src="./pictures/tab/zeomol-p.jpg" style="width:100%">
-      <center><h4>Zeomol-p</h4></center>
+      <center><h4>Zeomol-P</h4></center>
       <p></p>
     </div>
   </div>
   <div class="column Tablets">
     <div class="content">
       <img src="./pictures/tab/zepant-d.jpg" style="width:100%">
-      <center><h4>Zepant-d</h4></center>
+      <center><h4>Zepant-D</h4></center>
       <p></p>
     </div>
   </div>
@@ -274,7 +274,7 @@ body {
   <div class="column Tablets">
     <div class="content">
       <img src="./pictures/tab/zepixime lb.jpg" style="width:100%">
-      <center><h4>Zepixime lb</h4></center>
+      <center><h4>Zepixime LB</h4></center>
       <p></p>
     </div>
   </div>
@@ -316,14 +316,14 @@ body {
   <div class="column Tablets">
     <div class="content">
       <img src="./pictures/tab/zevozine-fx.jpg" style="width:100%">
-      <center><h4>Zevozine-fx</h4></center>
+      <center><h4>Zevozine-FX</h4></center>
       <p></p>
     </div>
   </div>
   <div class="column Tablets">
     <div class="content">
       <img src="./pictures/tab/zevozine-lc.jpg" style="width:100%">
-      <center><h4>Zevozine-lc</h4></center>
+      <center><h4>Zevozine-LC</h4></center>
       <p></p>
     </div>
   </div>
@@ -337,7 +337,7 @@ body {
   <div class="column Tablets">
     <div class="content">
       <img src="./pictures/tab/zezole-d.jpg" style="width:100%">
-      <center><h4>Zezole-d</h4></center>
+      <center><h4>Zezole-D</h4></center>
       <p></p>
     </div>
   </div>
@@ -351,14 +351,14 @@ body {
   <div class="column Tablets">
     <div class="content">
       <img src="./pictures/tab/zinclav-lb.jpg" style="width:100%">
-      <center><h4>Zinclav-lb</h4></center>
+      <center><h4>Zinclav-LB</h4></center>
       <p></p>
     </div>
   </div>
   <div class="column Tablets">
     <div class="content">
       <img src="./pictures/tab/zodron-md.jpg" style="width:100%">
-      <center><h4>Zodron-md</h4></center>
+      <center><h4>Zodron-MD</h4></center>
       <p></p>
     </div>
   </div>
@@ -372,7 +372,7 @@ body {
   <div class="column Tablets">
     <div class="content">
       <img src="./pictures/tab/zofloxin-oz.jpg" style="width:100%">
-      <center><h4>Zofloxin-oz</h4></center>
+      <center><h4>Zofloxin-OZ</h4></center>
       <p></p>
     </div>
   </div>
@@ -400,14 +400,14 @@ body {
   <div class="column Tablets">
     <div class="content">
       <img src="./pictures/tab/citycan.jpg" style="width:100%">
-      <center><h4>Citycan</h4></center>
+      <center><h4>Citycan 150</h4></center>
       <p></p>
     </div>
   </div>
   <div class="column Tablets">
     <div class="content">
       <img src="./pictures/tab/fourvit-xt.jpg" style="width:100%">
-      <center><h4>Fourvit-xt</h4></center>
+      <center><h4>Fourvit-XT</h4></center>
       <p></p>
     </div>
   </div>
@@ -421,7 +421,7 @@ body {
   <div class="column Tablets">
     <div class="content">
       <img src="./pictures/tab/gold-dm.jpg" style="width:100%">
-      <center><h4>Gold-dm</h4></center>
+      <center><h4>Gold-DM</h4></center>
       <p></p>
     </div>
   </div>
@@ -456,14 +456,14 @@ body {
   <div class="column Tablets">
     <div class="content">
       <img src="./pictures/tab/aviglim m1.jpg" style="width:100%">
-      <center><h4>Aviglim m1</h4></center>
+      <center><h4>Aviglim M1</h4></center>
       <p></p>
     </div>
   </div>
   <div class="column Tablets">
     <div class="content">
       <img src="./pictures/tab/aviglim-m2.jpg" style="width:100%">
-      <center><h4>Aviglim-m2</h4></center>
+      <center><h4>Aviglim-M2</h4></center>
       <p></p>
     </div>
   </div>
@@ -491,113 +491,113 @@ body {
   <div class="column Capsules">
     <div class="content">
       <img src="./pictures/Caps/z-zole 200.jpg" style="width:100%">
-      <h4>Product Name</h4>
-      <p>Add Product Description here</p>
+      <center><h4>Z-Zole 200</h4></center>
+      <p></p>
     </div>
   </div>
   <div class="column Capsules">
       <div class="content">
         <img src="./pictures/Caps/z-zole 100.jpg" style="width:100%">
-        <h4>Product Name</h4>
-        <p>Add Product Description here</p>
+        <center><h4>Z-Zole 100</h4></center>
+        <p></p>
       </div>
   </div>
   <div class="column Capsules">
       <div class="content">
         <img src="./pictures/Caps/Belly-In.jpg" style="width:100%">
-        <h4>Product Name</h4>
-        <p>Add Product Description here</p>
+        <center><h4>Belly-In</h4></center>
+        <p></p>
       </div>
   </div>
   <div class="column Capsules">
       <div class="content">
         <img src="./pictures/Caps/Racferol.jpg" style="width:100%">
-        <h4>Product Name</h4>
-        <p>Add Product Description here</p>
+        <center><h4>Racferol</h4></center>
+        <p></p>
       </div>
   </div>
   <div class="column Capsules">
       <div class="content">
         <img src="./pictures/Caps/sambac.jpg" style="width:100%">
-        <h4>Product Name</h4>
-        <p>Add Product Description here</p>
+        <center><h4>Sambac</h4></center>
+        <p></p>
       </div>
   </div>
   <div class="column Capsules">
       <div class="content">
         <img src="./pictures/Caps/zeaco-p.jpg" style="width:100%">
-        <h4>Product Name</h4>
-        <p>Add Product Description here</p>
+        <center><h4>Zeaco-P</h4></center>
+        <p></p>
       </div>
   </div>
   <div class="column Capsules">
       <div class="content">
         <img src="./pictures/Caps/zepant dsr.jpg" style="width:100%">
-        <h4>Product Name</h4>
-        <p>Add Product Description here</p>
+        <center><h4>Zepant DSR</h4></center>
+        <p></p>
       </div>
   </div>
   <div class="column Capsules">
       <div class="content">
         <img src="./pictures/Caps/zepradom.jpg" style="width:100%">
-        <h4>Product Name</h4>
-        <p>Add Product Description here</p>
+        <center><h4>Zepradom</h4></center>
+        <p></p>
       </div>
   </div>
   <div class="column Capsules">
       <div class="content">
         <img src="./pictures/Caps/zerich.jpg" style="width:100%">
-        <h4>Product Name</h4>
-        <p>Add Product Description here</p>
+        <center><h4>Zerich</h4></center>
+        <p></p>
       </div>
   </div>
   <div class="column Capsules">
       <div class="content">
         <img src="./pictures/Caps/Zeride-ls.jpg" style="width:100%">
-        <h4>Product Name</h4>
-        <p>Add Product Description here</p>
+        <center><h4>Zeride-LS</h4></center>
+        <p></p>
       </div>
   </div>
   <div class="column Capsules">
       <div class="content">
         <img src="./pictures/Caps/Zezole DSR.jpg" style="width:100%">
-        <h4>Product Name</h4>
-        <p>Add Product Description here</p>
+        <center><h4>Zezole DSR</h4></center>
+        <p></p>
       </div>
   </div>
   <div class="column Capsules">
       <div class="content">
         <img src="./pictures/Caps/Zocal K27.jpg" style="width:100%">
-        <h4>Product Name</h4>
-        <p>Add Product Description here</p>
+        <center><h4>Zocal K27</h4></center>
+        <p></p>
       </div>
   </div>
   <div class="column Capsules">
       <div class="content">
         <img src="./pictures/Caps/ZP-Vit.jpg" style="width:100%">
-        <h4>Product Name</h4>
-        <p>Add Product Description here</p>
+        <center><h4>ZP-Vit</h4></center>
+        <p></p>
       </div>
   </div>
   <div class="column Capsules">
       <div class="content">
         <img src="./pictures/Caps/Zyecopene.jpg" style="width:100%">
-        <h4>Product Name</h4>
-        <p>Add Product Description here</p>
+        <center><h4>Zyecopene</h4></center>
+        <p></p>
       </div>
   </div>
   <div class="column Capsules">
       <div class="content">
         <img src="./pictures/Caps/moni-forte.jpg" style="width:100%">
-        <h4>Product Name</h4>
-        <p>Add Product Description here</p>
+        <center><h4>Moni-Forte</h4></center>
+        <p></p>
       </div>
   </div>
   <div class="column Capsules">
       <div class="content">
         <img src="./pictures/Caps/Kimidox-lb.jpg" style="width:100%">
-        <h4>Product Name</h4>
-        <p>Add Product Description here</p>
+        <center><h4>Kimidox-LB</h4></center>
+        <p></p>
       </div>
   </div>
   <div class="column Ayurvedic">
